fix: rename release_name to name

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,9 +36,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        name: Release ${{ github.ref }}
         draft: false
         prerelease: false
+        make_latest: true
 
     - name: Upload Linux Binary
       uses: actions/upload-release-asset@v1
