feat: add seeding using cli
feat: move initialization to seperate file
feat: add geng run, geng seed and geng start command

feat: use project name for container name when project is being generated

--- a/templates/wesionary/project/docker-compose.yml
+++ b/templates/wesionary/project/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - .:/clean_web
     env_file: .env
-    container_name: clean-web
+    container_name: {{.PackageName}}
     security_opt:
       - seccomp:unconfined
     extra_hosts:
