feat: add condition to run on mukezhz github repo

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -26,6 +26,7 @@ concurrency:
 jobs:
   # Build job
   build:
+    if: github.repository_owner == 'mukezhz'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
